Implement Previous/Next Lesson Navigation
- Add logic to find previous and next lessons across all levels
- Update lesson page navigation to show Previous/Next Lesson links
- Add translation keys for navigation in all languages (Russian, English, Kazakh)
- Show 'Back to Dashboard' when no next lesson available
- Maintain proper lesson ordering by level_id and order_index

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -199,7 +199,21 @@
     "completeVideoFirst": "Complete the video first",
     "completeChallengeFirst": "Complete the challenge first",
     "backToLevel": "← Back to Level",
-    "dashboard": "Dashboard →"
+    "dashboard": "Dashboard →",
+    "previousLesson": "← Previous Lesson",
+    "nextLesson": "Next Lesson →",
+    "backToDashboard": "Back to Dashboard →"
+  },
+  "login": {
+    "title": "Sign in to your account",
+    "emailPassword": "use password",
+    "magicLink": "use magic link",
+    "emailPlaceholder": "Email address",
+    "passwordPlaceholder": "Password",
+    "sendMagicLink": "Send Magic Link",
+    "signIn": "Sign in",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign up"
   },
   "common": {
     "loading": "Loading...",
