--- a/public/locales/kk/common.json
+++ b/public/locales/kk/common.json
@@ -41,7 +41,7 @@
     "readyToStart": "Шахмат саяхатыңызды бастауға дайынсыз ба?",
     "joinThousands": "Біздің құрылымдалған тәсілімізбен шахмат үйренетін мыңдаған студенттерге қосылыңыз",
     "getStartedFree": "Тегін бастау",
-    "copyright": "© 2024 Chess Empire. Барлық құқықтар қорғалған."
+    "copyright": "© 2025 Chess Empire. Барлық құқықтар қорғалған."
   },
   "dashboard": {
     "welcome": "Шахмат саяхатыңызға қош келдіңіз",
@@ -137,7 +137,9 @@
     "test": "Тест",
     "passed": "Өтті",
     "notPassed": "Өтпеді",
-    "reviewLesson": "Сабақты қайталау"
+    "reviewLesson": "Сабақты қайталау",
+    "courseTitle": "Chess Empire",
+    "courseDescription": "Шахматты негіздерден жоғары деңгейге дейін үйреніңіз"
   },
   "lesson": {
     "loading": "Сабақ жүктелуде...",
