feat: dashboard + levels UI/UX updates, progress calc and rounding, i18n labels, gradients, tile states

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -61,6 +61,7 @@
     "courseLevels": "Course Levels",
     "startLevel": "Start Level",
     "continueLevel": "Continue Level",
+    "reviewLevel": "Review Level",
     "downloadPDF": "Download PDF",
     "completePrevious": "Complete Previous Level",
     "locked": "🔒 Locked",
