--- a/public/locales/kk/common.json
+++ b/public/locales/kk/common.json
@@ -53,6 +53,7 @@
     "courseLevels": "Курс деңгейлері",
     "startLevel": "Деңгейді бастау",
     "continueLevel": "Деңгейді жалғастыру",
+    "reviewLevel": "Деңгейді қайталау",
     "downloadPDF": "PDF жүктеу",
     "completePrevious": "Алдыңғы деңгейді аяқтаңыз",
     "locked": "🔒 Құлыпталған",
