--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -56,6 +56,7 @@
     "progress": "Прогресс",
     "startLevel": "Начать уровень",
     "continueLevel": "Продолжить уровень",
+    "reviewLevel": "Повторить уровень",
     "downloadPDF": "Скачать PDF",
     "completePreviousLevel": "Завершите предыдущий уровень",
     "beginner": "Начинающий",
