i18n: remove 'Free' from startLearning subtitle on signup (en/ru/kk)

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,7 +18,7 @@
   "home": {
     "title": "Master Chess with Interactive Lessons",
     "subtitle": "Learn chess from beginner to advanced with our structured course, interactive challenges, and progress tracking.",
-    "startLearning": "Start Learning Free",
+    "startLearning": "Start Learning",
     "signIn": "Sign In",
     "structuredLearning": "Structured Learning Path",
     "progressDescription": "Progress through 3 comprehensive levels with 30+ lessons each",
