--- a/public/locales/kk/common.json
+++ b/public/locales/kk/common.json
@@ -10,7 +10,7 @@
   "home": {
     "title": "Интерактивті сабақтармен шахматты үйреніңіз",
     "subtitle": "Біздің білім империямыз, интерактивті тапсырмаларымыз және прогресті бақылауымыз арқылы бастапқы деңгейден жоғары деңгейге дейін шахматты үйреніңіз.",
-    "startLearning": "Тегін үйренуді бастау",
+    "startLearning": "Үйренуді бастау",
     "signIn": "Кіру",
     "structuredLearning": "Құрылымдық оқу жолы",
     "progressDescription": "Әрқайсысында 30+ сабақ бар 3 кешенді деңгей арқылы өтіңіз",
