--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -10,7 +10,7 @@
   "home": {
     "title": "Изучайте шахматы с интерактивными уроками",
     "subtitle": "Изучайте шахматы от новичка до продвинутого уровня с нашей империей знаний, интерактивными задачами и отслеживанием прогресса.",
-    "startLearning": "Начать обучение бесплатно",
+    "startLearning": "Начать обучение",
     "signIn": "Войти",
     "structuredLearning": "Структурированный путь обучения",
     "progressDescription": "Прогрессируйте через 3 комплексных уровня с 30+ уроками каждый",
