dashboard: add Favorites tab with i18n and list of bookmarked lessons; lessons: persist bookmark per-user in localStorage

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -59,6 +59,9 @@
     "lessons": "lessons",
     "complete": "complete",
     "courseLevels": "Course Levels",
+    "levelsTab": "Levels",
+    "favoriteLessons": "Favorite Lessons",
+    "noFavorites": "No favorite lessons yet",
     "startLevel": "Start Level",
     "continueLevel": "Continue Level",
     "reviewLevel": "Review Level",
