--- a/public/locales/kk/common.json
+++ b/public/locales/kk/common.json
@@ -51,6 +51,9 @@
     "lessons": "сабақ",
     "complete": "аяқталды",
     "courseLevels": "Курс деңгейлері",
+    "levelsTab": "Деңгейлер",
+    "favoriteLessons": "Таңдаулы сабақтар",
+    "noFavorites": "Әзірге таңдаулы сабақтар жоқ",
     "startLevel": "Деңгейді бастау",
     "continueLevel": "Деңгейді жалғастыру",
     "reviewLevel": "Деңгейді қайталау",
