--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -52,6 +52,9 @@
     "complete": "завершено",
     "earnedBadges": "Полученные значки",
     "courseLevels": "Уровни курса",
+    "levelsTab": "Уровни",
+    "favoriteLessons": "Избранные уроки",
+    "noFavorites": "Пока нет избранных уроков",
     "locked": "🔒 Заблокировано",
     "progress": "Прогресс",
     "startLevel": "Начать уровень",
