i18n: translate level group tabs label via dashboard.levelWord (ru=Ступень, kk=Саты); keep English Level

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -62,6 +62,7 @@
     "levelsTab": "Levels",
     "favoriteLessons": "Favorite Lessons",
     "noFavorites": "No favorite lessons yet",
+    "levelWord": "Level",
     "startLevel": "Start Level",
     "continueLevel": "Continue Level",
     "reviewLevel": "Review Level",
