--- a/public/locales/kk/common.json
+++ b/public/locales/kk/common.json
@@ -54,6 +54,7 @@
     "levelsTab": "Деңгейлер",
     "favoriteLessons": "Таңдаулы сабақтар",
     "noFavorites": "Әзірге таңдаулы сабақтар жоқ",
+    "levelWord": "Саты",
     "startLevel": "Деңгейді бастау",
     "continueLevel": "Деңгейді жалғастыру",
     "reviewLevel": "Деңгейді қайталау",
