--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -55,6 +55,7 @@
     "levelsTab": "Уровни",
     "favoriteLessons": "Избранные уроки",
     "noFavorites": "Пока нет избранных уроков",
+    "levelWord": "Ступень",
     "locked": "🔒 Заблокировано",
     "progress": "Прогресс",
     "startLevel": "Начать уровень",
