--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -13,7 +13,7 @@
     "startLearning": "Начать обучение",
     "signIn": "Войти",
     "structuredLearning": "Структурированный путь обучения",
-    "progressDescription": "Прогрессируйте через 3 комплексных уровня с 30+ уроками каждый",
+    "progressDescription": "Прогрессируйте через 3 комплексных уровня со 100+ уроками каждый",
     "beginnerLevel": "Начальный уровень",
     "beginnerDescription": "Изучите основы: движение фигур, базовую тактику и принципы дебюта.",
     "intermediateLevel": "Средний уровень",
